tests/snapshots/run_wpt_conformance__coreml_reduceMax_float32_1D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_max.https.any.js reduceMax float32 1D constant tensor empty axes, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: NSGenericException: Failed to add operation to E5 stream. E5RT: Unable to bind buffer to network. (2)

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[2] @bytes([149, 170, 0, 66, 149, 170, 0, 66]);
  }

  nodes {
    [reduceMaxOutput] = reduceMax(operand_0, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceMaxOutput; }
}
